Fix compilation warnings https://bugs.webkit.org/show_bug.cgi?id=98020

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-01
Reviewed by Gyuyoung Kim.

Source/WebCore:

Fix compilation warnings in PluginView code.

No new tests, no behavior change.

* plugins/PluginView.cpp:
(WebCore::PluginView::newStream):
(WebCore::PluginView::write):
(WebCore::PluginView::getAuthenticationInfo):
* plugins/efl/PluginViewEfl.cpp:
(WebCore::PluginView::setNPWindowRect):
(WebCore::PluginView::invalidateRegion):

Source/WebKit2:

Fix compilation warnings related to ewk_view.

* UIProcess/API/efl/ewk_view.cpp:
(_ewk_view_feed_touch_event_using_touch_point_list_of_evas):
(_ewk_view_on_touch_down):
(_ewk_view_on_touch_up):
(_ewk_view_on_touch_move):
* UIProcess/API/efl/ewk_view_ui_client.cpp:
(exceededDatabaseQuota):

Canonical link: https://commits.webkit.org/116062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130061 268f45cc-cd09-0410-ab3c-d52691b4dbfc